force-app/main/default/objects/CommunicationLog__c/CommunicationLog__c.object-meta.xml
<CustomObject>
    <label>CommunicationLog</label>
    <nameField>
        <label>CommunicationLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>