force-app/main/default/objects/CommunicationLog__c/fields/AdvisoryMessage__c.field-meta.xml
<CustomField>
    <fullName>AdvisoryMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisory Message</label>
    <referenceTo>AdvisoryMessage__c</referenceTo>
    <relationshipLabel>CommunicationLog</relationshipLabel>
    <relationshipName>CommunicationLog</relationshipName>
    <type>Lookup</type>
</CustomField>