force-app/main/default/objects/CommunicationLog__c/fields/ClientResponse__c.field-meta.xml
<CustomField>
    <fullName>ClientResponse__c</fullName>
    <label>Client Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>