force-app/main/default/objects/CommunicationLog__c/fields/ResponseAt__c.field-meta.xml
<CustomField>
    <fullName>ResponseAt__c</fullName>
    <label>ResponseAt</label>
    <type>DateTime</type>
</CustomField>